<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    tools:context="com.example.android.mathquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mathematics_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="40dp"
            android:text="@string/math_quiz"
            android:textColor="#ab47bc"
            android:textSize="60sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:textColor="#ab47bc"
            android:textColorHint="#ab47bc"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/A_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/_248_62"
            android:textColor="#ab47bc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/A_correct_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_310"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/A_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_312"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/A_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_298"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RadioGroup>


        <TextView
            android:id="@+id/B_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/_144_4"
            android:textColor="#ab47bc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/B_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_28"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/B_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_40"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/B_correct_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"

                android:padding="20dp"
                android:text="@string/_36"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RadioGroup>


        <TextView
            android:id="@+id/C_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/_120_20"
            android:textColor="#ab47bc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/C_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_8"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/C_correct_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_6"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/C_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:padding="20dp"
                android:text="@string/_5"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/E_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/_25"
            android:textColor="#ab47bc"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/E_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:padding="20dp"
                android:text="@string/_25_25"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/E_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/E_answer4"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/E_answer4"
                android:padding="20dp"
                android:text="@string/_125_5"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/E_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/E_answer1"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:padding="20dp"
                android:text="@string/_25_6"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/E_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="63dp"
                android:layout_marginRight="63dp"
                android:padding="20dp"
                android:text="@string/_25_1"
                android:textColor="#ab47bc"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/game_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#ab47bc"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FFAB47BC"
            android:onClick="submitScore"
            android:text="@string/submit"
            android:textColor="#f2f7f7"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FFAB47BC"
            android:onClick="resetQuiz"
            android:text="@string/reset"
            android:textColor="#f2f7f7"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
